<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="lukasz.ctistudentclient.Activity.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:orientation="vertical"
        >

        <TextView

            android:text="@string/contentName"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_marginBottom="24dp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/txtViewName"/>
        <ImageView android:src="@drawable/mobile_restore_logo"
            android:layout_height="150dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:contentDescription="@string/app_name"
            android:id="@+id/imgViewLogo"
            android:layout_below="@id/txtViewName"/>
        <TextView
            android:text="@string/contentText"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:id="@+id/txtViewDescription"
            android:layout_below="@id/imgViewLogo"/>
        <Button
            android:id="@+id/main_activity_buttonNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:maxHeight="60dp"
            android:text="Zgłoś usterkę!"/>
    </RelativeLayout>
</LinearLayout>
