<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lukasz.ctistudentclient.Fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_profile"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp">

                <LinearLayout
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="24dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/mobile_restore_logo"
                        android:layout_marginRight="24dp"/>

                    <LinearLayout
                        android:id="@+id/profile_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <TextView
                            android:textColor="@android:color/holo_red_dark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Login:"
                            android:textSize="24dp" />

                        <TextView
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="200dp"
                            android:textSize="22dp"
                            android:text="@string/login_activity_loginText"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_image"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Imię:"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/profile_fragment_firstname"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="200dp"
                        android:textSize="22dp"
                        android:text="@string/profile_firstNameText"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profile_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_firstName"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nazwisko:"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/profile_fragment_lastname"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="200dp"
                        android:textSize="22dp"
                        android:text="@string/profile_lastNameText"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_lastName"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email:"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/profile_fragment_email"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="200dp"
                        android:textSize="22dp"
                        android:text="@string/profile_emailTxt"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/profile_dateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_email"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Data urodzenia:"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/profile_fragment_birthday"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="200dp"
                        android:textSize="22dp"
                        android:text="@string/profile_dateOfBirthTxt"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/profile_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_dateOfBirth"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Miejscowość:"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/profile_fragment_city"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="200dp"
                        android:textSize="22dp"
                        android:text="@string/profile_cityTxt"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/profile_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_city"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ulica:"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/profile_fragment_street"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="200dp"
                        android:textSize="22dp"
                        android:text="@string/profile_streetTxt"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/profile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_street"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Numer:"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/profile_fragment_number"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:width="200dp"
                        android:textSize="22dp"
                        android:text="@string/profile_numberTxt"/>
                </LinearLayout>
                <Button
                    android:id="@+id/profile_logoutBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_number"
                    android:text="Wyloguj"
                    android:layout_marginTop="24dp"/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>


</FrameLayout>
